# Microservice-Summary-App

./: dockerfile  pyproject.toml  requirements.txt
services/: InContextService.py  test.py
services/utils/: BasicInference.py  Inference.py  ZeroShot.py
